--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "axios": "^1.3.0",
     "express": "^4.18.2",
-    "body-parser": "^1.20.1"
+    "axios": "^1.4.0",
+    "stripe": "^12.5.0"
   }
 }
